[project]
name = "block-schema-lint"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = ["basedpyright"]

[tool.basedpyright]
# clang.cindex is a C extension with incomplete stubs — its enum values
# (CursorKind.STRUCT_DECL, CursorKind.CLASS_DECL, etc.) are dynamically
# generated and missing from the .pyi file. Suppress false positives.
# clang.cindex stub limitations — cannot fix without upstream changes
reportAttributeAccessIssue = "warning"
reportUnknownMemberType = "warning"
reportExplicitAny = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"

# Intentional Python patterns: implicit string concatenation for multi-line
# strings, argparse.add_argument() return values, os.unlink() in finally blocks
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"
reportUnusedFunction = "none"

# Genuine errors we want to catch
reportMissingTypeArgument = "error"
reportPossiblyUnboundVariable = "error"
reportMissingImports = false  # clang is a PEP 723 runtime dep, not installed in host Python
reportMissingModuleSource = "none"  # clang stubs via typings/, not installed in .venv

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
